--- a/css/game.css
+++ b/css/game.css
@@ -23,3 +23,8 @@ canvas {
     z-index: 10;                /*canvas is over the top of the table*/
     pointer-events: none;       /*makes canvas invisible*/
 }
+
+h1 {
+    text-align: center;
+    width: 100%;
+}
